@@ -1,3 +1,13 @@
+2008-03-25 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b122
+
+ * Fix: Renaming an album-foldername in a subalbum ended in a wron redirect.
+
+   Thanks to 'plug' from forum.
+
+ * Fix: Warning when using fs_exec in windows.
+
+ * Change: Admins can now always change their password.
+
 2008-03-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b121
 
  * Fix: "view comments" should not be an option in thumbs view.
